--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.0.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
