--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "start": "node ./src/bin/www.ts",
+    "start": "node ts-node ./src/bin/www.ts",
     "test": "nodemon --exec ts-node ./src/bin/www.ts",
     "build": "tsc"
   },
@@ -19,7 +19,8 @@
     "jade": "~1.11.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "promise": "^8.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
