--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node ts-node ./src/bin/www.ts",
-    "test": "nodemon --exec ts-node ./src/bin/www.ts",
-    "build": "tsc"
+    "dev": "nodemon --exec ts-node ./src/bin/www.ts",
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -20,13 +21,21 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "morgan": "~1.9.1",
-    "promise": "^8.3.0"
+    "promise": "^8.3.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
+    "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
